--- a/client/.eslintrc.json
+++ b/client/.eslintrc.json
@@ -10,7 +10,9 @@
     "import/no-unresolved": "off",
     "import/export": "off",
     "import/extensions": "off",
-    "no-underscore-dangle": "off"
+    "no-underscore-dangle": "off",
+    "no-unused-vars": "off",
+    "@typescript-eslint/no-unused-vars": "warn"
   },
   "parser": "@typescript-eslint/parser",
   "plugins": ["@typescript-eslint"],
