--- a/client/package.json
+++ b/client/package.json
@@ -62,7 +62,6 @@
     "style-loader": "^3.3.1",
     "tailwindcss": "^3.0.2",
     "terser-webpack-plugin": "^5.2.5",
-    "typescript": "^4.9.4",
     "web-vitals": "^2.1.4",
     "webpack": "^5.64.4",
     "webpack-dev-server": "^4.6.0",
@@ -85,6 +84,8 @@
     "eslint-config-prettier": "^8.5.0",
     "lighthouse": "^9.6.8",
     "prettier": "2.7.1",
+    "ts-loader": "^9.4.2",
+    "typescript": "^4.9.5",
     "url-loader": "^4.1.1",
     "webpack-node-externals": "^3.0.0"
   },
