fix: hydration 오류 수정

--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,7 @@
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
     "@hookform/resolvers": "^2.9.10",
+    "@loadable/component": "^5.15.3",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.3",
     "@svgr/webpack": "^5.5.0",
     "@testing-library/jest-dom": "^5.16.5",
@@ -71,6 +72,7 @@
   },
   "devDependencies": {
     "@types/jest": "^27.5.2",
+    "@types/loadable__component": "^5.13.4",
     "@types/node": "18.11.9",
     "@types/prop-types": "^15.7.5",
     "@types/react": "18.0.25",
@@ -90,7 +92,7 @@
     "webpack-node-externals": "^3.0.0"
   },
   "scripts": {
-    "start": "node scripts/start.js",
+    "start": "npm run build && npm run build:server && npm run start:server",
     "build": "node scripts/build.js",
     "test": "node scripts/test.js",
     "start:server": "node dist/server.js",
