feat: todo 상태 관리 redux toolkit으로 변경

--- a/package.json
+++ b/package.json
@@ -9,11 +9,12 @@
     "@hookform/resolvers": "^2.9.10",
     "@loadable/component": "^5.15.3",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.3",
+    "@reduxjs/toolkit": "^1.9.3",
     "@svgr/webpack": "^5.5.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "axios": "^1.2.2",
+    "axios": "^1.3.4",
     "babel-jest": "^27.4.2",
     "babel-loader": "^8.2.3",
     "babel-plugin-named-asset-import": "^0.3.8",
@@ -51,6 +52,7 @@
     "react-hook-form": "^7.41.5",
     "react-loading": "^2.0.3",
     "react-query": "^3.39.2",
+    "react-redux": "^8.0.5",
     "react-refresh": "^0.11.0",
     "react-router": "^6.8.2",
     "react-router-dom": "^6.6.1",
@@ -92,6 +94,7 @@
     "webpack-node-externals": "^3.0.0"
   },
   "scripts": {
+    "dev": "node scripts/start.js",
     "start": "npm run build && npm run build:server && npm run start:server",
     "build": "node scripts/build.js",
     "test": "node scripts/test.js",
