--- a/package.json
+++ b/package.json
@@ -6,7 +6,6 @@
     "@babel/core": "^7.16.0",
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
-    "@hookform/resolvers": "^2.9.10",
     "@loadable/component": "^5.15.3",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.3",
     "@reduxjs/toolkit": "^1.9.3",
@@ -49,28 +48,23 @@
     "react-app-polyfill": "^3.0.0",
     "react-dev-utils": "^12.0.1",
     "react-dom": "^18.2.0",
-    "react-hook-form": "^7.41.5",
     "react-loading": "^2.0.3",
-    "react-query": "^3.39.2",
     "react-redux": "^8.0.5",
     "react-refresh": "^0.11.0",
     "react-router": "^6.8.2",
     "react-router-dom": "^6.6.1",
-    "recoil": "^0.7.6",
     "resolve": "^1.20.0",
     "resolve-url-loader": "^4.0.0",
     "sass-loader": "^12.3.0",
     "semver": "^7.3.5",
     "source-map-loader": "^3.0.0",
     "style-loader": "^3.3.1",
-    "tailwindcss": "^3.0.2",
     "terser-webpack-plugin": "^5.2.5",
     "web-vitals": "^2.1.4",
     "webpack": "^5.64.4",
     "webpack-dev-server": "^4.6.0",
     "webpack-manifest-plugin": "^4.0.2",
-    "workbox-webpack-plugin": "^6.4.1",
-    "yup": "^0.32.11"
+    "workbox-webpack-plugin": "^6.4.1"
   },
   "devDependencies": {
     "@types/jest": "^27.5.2",
